--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <title>My First HTML Document</title>
+    <link rel="stylesheet" href="mystyle.css">
+
 </head>
 <body>
   <!-- Heading -->
